--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.3.9"
+    "@types/three": "^0.153.0",
+    "typescript": "~5.7.2",
+    "vite": "^6.2.2"
   },
   "dependencies": {
     "three": "^0.153.0"
